Fixed homepage buttons to be readable on hover.

--- a/electron/src/stylesheet.css
+++ b/electron/src/stylesheet.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .button:hover {
-	opacity: 0.75;
+	background-color: rgba(47, 79, 79, 0.4);
 	color: rgb(50, 50, 50);
 }
 
